change on the style of the table
I have just updated the the text style of the text

--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -59,19 +59,19 @@
                     <h2>Prices</h2>
                     <table class="table">
                         <tr>
-                            <td>ክትፎ</td>
+                            <td><b>ክትፎ</b></td>
                             <td>800 Birr</td>
                         </tr>
                         <tr>
-                            <td>ጥሬ ስጋ</td>
+                            <td><b>ጥሬ ስጋ</b></td>
                             <td>1200 Birr</td>
                         </tr>
                         <tr>
-                            <td>Falafel</td>
+                            <td><b>Falafel</b></td>
                             <td>270 Birr</td>
                         </tr>
                         <tr>
-                            <td>Salad</td>
+                            <td><b>Salad</b></td>
                             <td>190 Birr</td>
                         </tr>
                     </table>
